--- a/Sentiment Analysis.ipynb
+++ b/Sentiment Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "ec60f723",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "9340b904",
    "metadata": {},
    "outputs": [
@@ -20,13 +20,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: nltk in c:\\users\\saheediyanda\\appdata\\roaming\\python\\python39\\site-packages (3.8.1)\n",
-      "Requirement already satisfied: click in c:\\users\\saheediyanda\\anaconda3\\lib\\site-packages (from nltk) (8.0.3)\n",
-      "Requirement already satisfied: joblib in c:\\users\\saheediyanda\\anaconda3\\lib\\site-packages (from nltk) (1.1.0)\n",
-      "Requirement already satisfied: regex>=2021.8.3 in c:\\users\\saheediyanda\\anaconda3\\lib\\site-packages (from nltk) (2021.8.3)\n",
-      "Requirement already satisfied: tqdm in c:\\users\\saheediyanda\\anaconda3\\lib\\site-packages (from nltk) (4.62.3)\n",
-      "Requirement already satisfied: colorama in c:\\users\\saheediyanda\\anaconda3\\lib\\site-packages (from click->nltk) (0.4.4)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
+      "Requirement already satisfied: nltk in c:\\users\\saheediyanda\\appdata\\roaming\\python\\python39\\site-packages (3.8.1)Note: you may need to restart the kernel to use updated packages.\n"
      ]
     },
     {
@@ -34,6 +28,18 @@
      "output_type": "stream",
      "text": [
       "DEPRECATION: pyodbc 4.0.0-unsupported has a non-standard version number. pip 24.0 will enforce this behaviour change. A possible replacement is to upgrade to a newer version of pyodbc or contact the author to suggest that they release a version with a conforming version number. Discussion can be found at https://github.com/pypa/pip/issues/12063\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Requirement already satisfied: click in c:\\users\\saheediyanda\\anaconda3\\lib\\site-packages (from nltk) (8.0.3)\n",
+      "Requirement already satisfied: joblib in c:\\users\\saheediyanda\\anaconda3\\lib\\site-packages (from nltk) (1.3.2)\n",
+      "Requirement already satisfied: regex>=2021.8.3 in c:\\users\\saheediyanda\\anaconda3\\lib\\site-packages (from nltk) (2021.8.3)\n",
+      "Requirement already satisfied: tqdm in c:\\users\\saheediyanda\\anaconda3\\lib\\site-packages (from nltk) (4.62.3)\n",
+      "Requirement already satisfied: colorama in c:\\users\\saheediyanda\\anaconda3\\lib\\site-packages (from click->nltk) (0.4.6)\n"
      ]
     }
    ],
@@ -43,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "59abcc84",
    "metadata": {},
    "outputs": [
@@ -152,7 +158,7 @@
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
